--- a/Group_Project_Try1/res/values/strings.xml
+++ b/Group_Project_Try1/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="app_name">Group_Project_Try1</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="title_activity_chat">ChatActivity</string>
+    
+    <string name="edit_message">Enter a message</string>
+    <string name="button_send">Send</string>
+    <string name="chat_text">Chat Now!</string>
 
 </resources>
